--- a/dubbo-consumer/src/main/webapp/WEB-INF/web.xml
+++ b/dubbo-consumer/src/main/webapp/WEB-INF/web.xml
@@ -9,9 +9,9 @@
   <!--<context-param>
     <param-name>contextConfigLocation</param-name>
     <param-value>classpath:spring/applicationContext.xml</param-value>
-  </context-param>-->
+  </context-param>
 
-  <!--<listener>
+  <listener>
     <listener-class>org.springframework.web.context.ContextLoaderListener</listener-class>
   </listener>-->
 
