--- a/dubbo-consumer/pom.xml
+++ b/dubbo-consumer/pom.xml
@@ -30,11 +30,25 @@
       <artifactId>dubbo-api</artifactId>
       <version>1.0-SNAPSHOT</version>
     </dependency>
+    <!-- slf4j-logback日志绑定   -->
+    <!-- https://mvnrepository.com/artifact/ch.qos.logback/logback-classic -->
     <dependency>
-      <groupId>junit</groupId>
-      <artifactId>junit</artifactId>
-      <version>4.11</version>
-      <scope>test</scope>
+      <groupId>ch.qos.logback</groupId>
+      <artifactId>logback-classic</artifactId>
+      <version>1.2.3</version>
+      <!--<scope>test</scope>-->
+    </dependency>
+
+    <!--SpringFox dependencies -->
+    <dependency>
+      <groupId>io.springfox</groupId>
+      <artifactId>springfox-swagger-ui</artifactId>
+      <version>2.8.0</version>
+    </dependency>
+    <dependency>
+      <groupId>io.springfox</groupId>
+      <artifactId>springfox-swagger2</artifactId>
+      <version>2.8.0</version>
     </dependency>
   </dependencies>
 
