--- a/dubbo-provider/src/main/resources/application.properties
+++ b/dubbo-provider/src/main/resources/application.properties
@@ -1,4 +1,4 @@
 jdbc_driver=com.mysql.jdbc.Driver
-jdbc_url=jdbc:mysql://localhost:3306/mine_demo
+jdbc_url=jdbc:mysql://106.52.169.187:3306/mine-dubbo
 jdbc_user=root
 jdbc_password=root
